--- a/test/integration/targets/win_iis_webbinding/defaults/main.yml
+++ b/test/integration/targets/win_iis_webbinding/defaults/main.yml
@@ -1,13 +1,30 @@
 test_iis_site_name: default web site
 
-http_binding:
+http_vars:
   protocol: http
   port: 80
   ip: '*'
-  host_header: test.com
 
-https_binding:
+http_header_vars:
+  protocol: http
+  port: 80
+  ip: '*'
+  header: test.com
+
+https_vars:
   protocol: https
   port: 443
   ip: '*'
-  host_header: test.com
+
+https_header_vars:
+  protocol: https
+  port: 443
+  ip: '*'
+  header: test.com
+  ssl_flags: 1
+
+https_wc_vars:
+  protocol: https
+  port: 443
+  ip: '127.0.0.1'
+  header: wc.test.com
