--- a/test/integration/targets/win_iis_webbinding/tasks/http.yml
+++ b/test/integration/targets/win_iis_webbinding/tasks/http.yml
@@ -4,47 +4,51 @@
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: present
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: http_no_header
   check_mode: yes
 
 - name: CM get binding info no header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: get_http_no_header
+  changed_when: false
 
 - name: CM add http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: present
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: http_header
   check_mode: yes
 
 - name: CM get binding info header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: get_http_header
+  changed_when: false
 
 - name: CM assert changed, but not added
   assert:
     that:
     - http_no_header | changed
-    - http_no_header.added is not defined and get_http_no_header.binding is not defined
+    - http_no_header.binding_info is none
+    - get_http_no_header.binding is not defined
     - http_header | changed
-    - http_header.added is not defined and get_http_header.binding is not defined
+    - http_header.binding_info is none
+    - get_http_header.binding is not defined
 
 #add
 #changed true, new bindings present
@@ -52,52 +56,56 @@
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: present
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: http_no_header
 
 - name: get binding info no header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: get_http_no_header
+  changed_when: false
 
 - name: add http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: present
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: http_header
 
 - name: get binding info header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: get_http_header
+  changed_when: false
 
 - name: assert changed and added
   assert:
     that:
     - http_no_header | changed
-    - http_no_header.added is defined
-    - http_no_header.added.ip == '*'
-    - http_no_header.added.port == '80'
-    - http_no_header.added.protocol == 'http'
+    - http_no_header.binding_info is defined
+    - http_no_header.operation_type == 'added'
+    - http_no_header.binding_info.ip == "{{ http_vars.ip }}"
+    - http_no_header.binding_info.port == {{ http_vars.port }}
+    - http_no_header.binding_info.protocol == "{{ http_vars.protocol }}"
     - http_header | changed
-    - http_header.added is defined
-    - http_header.added.ip == '*'
-    - http_header.added.port == '80'
-    - http_header.added.protocol == 'http'
-    - http_header.added.host_header == 'test.com'
+    - http_header.binding_info is defined
+    - http_header.operation_type == 'added'
+    - http_header.binding_info.ip == "{{ http_header_vars.ip }}"
+    - http_header.binding_info.port == {{ http_header_vars.port }}
+    - http_header.binding_info.protocol == "{{ http_header_vars.protocol }}"
+    - http_header.binding_info.hostheader == "{{ http_header_vars.header }}"
 
 #add idem
 #changed false
@@ -105,19 +113,19 @@
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: present
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: http_no_header
 
 - name: idem add http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: present
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: http_header
 
 - name: idem assert not changed
@@ -136,63 +144,67 @@
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: absent
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: http_no_header
   check_mode: yes
 
 - name: get binding info no header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: get_http_no_header
+  changed_when: false
 
 - name: cm remove http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: absent
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: http_header
   check_mode: yes
 
 - name: get binding info header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: get_http_header
+  changed_when: false
 
 - name: cm remove assert changed, but still present
   assert:
     that:
     - http_no_header | changed
-    - http_no_header.removed is defined
-    - http_no_header.removed.ip == '*'
-    - http_no_header.removed.port == '80'
-    - http_no_header.removed.protocol == 'http'
+    - http_no_header.binding_info is defined
+    - http_no_header.operation_type == 'removed'
+    - http_no_header.binding_info.ip == "{{ http_vars.ip }}"
+    - http_no_header.binding_info.port == {{ http_vars.port }}
+    - http_no_header.binding_info.protocol == "{{ http_vars.protocol }}"
     - get_http_no_header.binding is defined
-    - get_http_no_header.binding.ip == '*'
-    - get_http_no_header.binding.port == '80'
-    - get_http_no_header.binding.protocol == 'http'
+    - get_http_no_header.binding.ip == "{{ http_vars.ip }}"
+    - get_http_no_header.binding.port == {{ http_vars.port }}
+    - get_http_no_header.binding.protocol == "{{ http_vars.protocol }}"
     - http_header | changed
-    - http_header.removed is defined
-    - http_header.removed.ip == '*'
-    - http_header.removed.port == '80'
-    - http_header.removed.protocol == 'http'
-    - http_header.removed.host_header == 'test.com'
+    - http_header.binding_info is defined
+    - http_header.operation_type == 'removed'
+    - http_header.binding_info.ip == "{{ http_header_vars.ip }}"
+    - http_header.binding_info.port == {{ http_header_vars.port }}
+    - http_header.binding_info.protocol == "{{ http_header_vars.protocol }}"
+    - http_header.binding_info.hostheader == "{{ http_header_vars.header }}"
     - get_http_header.binding is defined
-    - get_http_header.binding.ip == '*'
-    - get_http_header.binding.port == '80'
-    - get_http_header.binding.protocol == 'http'
-    - get_http_header.binding.host_header == 'test.com'
+    - get_http_header.binding.ip == "{{ http_header_vars.ip }}"
+    - get_http_header.binding.port == {{ http_header_vars.port }}
+    - get_http_header.binding.protocol == "{{ http_header_vars.protocol }}"
+    - get_http_header.binding.hostheader == "{{ http_header_vars.header }}"
 
 
 #remove
@@ -201,53 +213,57 @@
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: absent
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: http_no_header
 
 - name: get binding info no header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: get_http_no_header
+  changed_when: false
 
 - name: remove http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: absent
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: http_header
 
 - name: get binding info header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: get_http_header
+  changed_when: false
 
 - name: remove assert changed and gone
   assert:
     that:
     - http_no_header | changed
-    - http_no_header.removed is defined
-    - http_no_header.removed.ip == '*'
-    - http_no_header.removed.port == '80'
-    - http_no_header.removed.protocol == 'http'
+    - http_no_header.operation_type == 'removed'
+    - http_no_header.binding_info is defined
+    - http_no_header.binding_info.ip == "{{ http_vars.ip }}"
+    - http_no_header.binding_info.port == {{ http_vars.port }}
+    - http_no_header.binding_info.protocol == "{{ http_vars.protocol }}"
     - get_http_no_header.binding is not defined
     - http_header | changed
-    - http_header.removed is defined
-    - http_header.removed.ip == '*'
-    - http_header.removed.port == '80'
-    - http_header.removed.protocol == 'http'
-    - http_header.removed.host_header == 'test.com'
+    - http_header.binding_info is defined
+    - http_header.operation_type == 'removed'
+    - http_header.binding_info.ip == "{{ http_header_vars.ip }}"
+    - http_header.binding_info.port == {{ http_header_vars.port }}
+    - http_header.binding_info.protocol == "{{ http_header_vars.protocol }}"
+    - http_header.binding_info.hostheader == "{{ http_header_vars.header }}"
     - get_http_header.binding is not defined
 
 #remove idem
@@ -256,46 +272,48 @@
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: absent
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: http_no_header
 
 - name: get binding info no header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    protocol: http
-    ip: '*'
-    port: 80
+    protocol: "{{ http_vars.protocol }}"
+    ip: "{{ http_vars.ip }}"
+    port: "{{ http_vars.port }}"
   register: get_http_no_header
+  changed_when: false
 
 - name: idem remove http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
     state: absent
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: http_header
 
 - name: get binding info header
-  test_win__webbindings:
+  test_get_webbindings:
     name: "{{ test_iis_site_name }}"
-    host_header: test.com
-    protocol: http
-    ip: '*'
-    port: 80
+    host_header: "{{ http_header_vars.header }}"
+    protocol: "{{ http_header_vars.protocol }}"
+    ip: "{{ http_header_vars.ip }}"
+    port: "{{ http_header_vars.port }}"
   register: get_http_header
+  changed_when: false
 
 - name: idem remove assert changed and gone
   assert:
     that:
     - not http_no_header | changed
-    - http_no_header.removed is not defined
+    - http_no_header.binding_info is not defined
     - get_http_no_header.binding is not defined
     - not http_header | changed
-    - http_header.removed is not defined
+    - http_header.binding_info is not defined
     - get_http_header.binding is not defined
 
 #bulk remove cm
@@ -314,13 +332,10 @@
    - test2.com
    - test3.com
 
-- debug:
-    var: http_header
-
-# - name: assert that multiple bindings are present
-#   assert:
-#     that:
-#     - http_header.added
+- assert:
+    that:
+    - http_header | changed
+    - http_header | json_query('results[*].binding_info') | length == 3
 
 #cm remove with host_header: '*' - verify changed true and that bulk remove tries to get them all
 #remove with host_header: '*'
@@ -328,12 +343,29 @@
 - name: bulk remove http binding with header
   win_iis_webbinding:
     name: "{{ test_iis_site_name }}"
-    state: present
+    state: absent
     host_header: '*'
     protocol: http
     ip: '*'
     port: 80
   register: http_header
 
-- debug:
-    var: http_header
+- name: get binding info header
+  test_get_webbindings:
+    name: "{{ test_iis_site_name }}"
+    host_header: "{{ item }}"
+    protocol: http
+    ip: '*'
+    port: 80
+  register: get_http_header
+  changed_when: false
+  with_items:
+   - test1.com
+   - test2.com
+   - test3.com
+
+- name: bulk remove assert that bindings are gone
+  assert:
+    that:
+    - http_header | changed
+    - http_header.binding_info | length == 3
