openssl_certificate: Return self.cert.get_VALUES()
Currently when we make up the return value, we take values based of the
parameters rather than the generated openssl_certificate itself.

This commits returns the actual certificate values making it all time
accurate.

--- a/test/integration/targets/openssl_certificate/tasks/main.yml
+++ b/test/integration/targets/openssl_certificate/tasks/main.yml
@@ -17,6 +17,16 @@
         privatekey_path: '{{ output_dir }}/privatekey.pem'
         provider: selfsigned
         selfsigned_digest: sha256
+      register: selfsigned_certificate
+
+    - name: Generate selfsigned certificate
+      openssl_certificate:
+        path: '{{ output_dir }}/cert.pem'
+        csr_path: '{{ output_dir }}/csr.csr'
+        privatekey_path: '{{ output_dir }}/privatekey.pem'
+        provider: selfsigned
+        selfsigned_digest: sha256
+      register: selfsigned_certificate_idempotence
 
     - name: Check selfsigned certificate
       openssl_certificate:
